--- a/updownclassification_using_keras.ipynb
+++ b/updownclassification_using_keras.ipynb
@@ -3,7 +3,9 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "from sklearn.preprocessing import LabelEncoder\n",
@@ -26,6 +28,7 @@
    },
    "outputs": [],
    "source": [
+    "#find this file under cobalt: /data/user/jkager/files/inicedstpulses_nugen11069_first50i3files.h5\n",
     "pulses_file = \"./data/inicedstpulses_nugen11069_first50i3files.h5\""
    ]
   },
@@ -61,7 +64,9 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def produce_raw_xlist(geo=None):\n",
@@ -91,7 +96,9 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def load_pulses_data(pulses_file, geo_file=None):\n",
@@ -268,6 +275,7 @@
    "cell_type": "code",
    "execution_count": 77,
    "metadata": {
+    "collapsed": true,
     "scrolled": true
    },
    "outputs": [],
@@ -277,17 +285,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 78,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 78,
-   "metadata": {},
    "outputs": [],
    "source": [
     "model = Sequential()\n",
@@ -456,7 +457,13 @@
    "metadata": {},
    "source": [
     "# results #\n",
-    "feedforward neural net 5160-1024-512-2, relu activations. trained on 25%"
+    "feedforward neural net 5160-1024-512-2, relu activations. trained on 75% of 10501 datasets. tested on 25%.\n",
+    "\n",
+    "Epoch 50/50\n",
+    "7875/7875 [==============================] - 3s - loss: 0.6672 - acc: 0.6000 \n",
+    "\n",
+    "[INFO] evaluating on testing set...\n",
+    "2432/2626 [==========================>...] - ETA: 0s[INFO] loss=0.6787, accuracy: 56.5499%"
    ]
   },
   {
