Put Detector in Cubic Grid

--- a/Create_Data_Files.ipynb
+++ b/Create_Data_Files.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 26,
    "metadata": {
     "collapsed": true
    },
@@ -13,13 +13,93 @@
     "import os\n",
     "import numpy as np\n",
     "import itertools\n",
-    "import matplotlib.pyplot as plt"
+    "import matplotlib.pyplot as plt\n",
+    "import math"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
-   "metadata": {},
+   "execution_count": 15,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "#######config\n",
+    "input_shape = [20,20,50]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n"
+     ]
+    }
+   ],
+   "source": [
+    "print int(math.floor(2.2))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def make_grid_dict(input_shape, geometry):\n",
+    "    \"\"\"Put the Icecube Geometry in a cubic grid. For each DOM calculate the grid position\n",
+    "\n",
+    "    Arguments:\n",
+    "    input_shape : The shape of the grid (x,y,z)\n",
+    "    geometry : Geometry file containing the positions of the DOMs in the Detector\n",
+    "    \"\"\"\n",
+    "    \n",
+    "    grid = dict()\n",
+    "    DOM_List = geometry.keys()\n",
+    "    xpos=[geo[i].position.x for i in DOM_List]\n",
+    "    ypos=[geo[i].position.y for i in DOM_List]\n",
+    "    zpos=[geo[i].position.z for i in DOM_List]\n",
+    "    xmin, xmax = np.min(xpos), np.max(xpos)\n",
+    "    delta_x = (xmax - xmin)/input_shape[0]\n",
+    "    ymin, ymax = np.min(ypos), np.max(ypos)\n",
+    "    delta_y = (ymax - ymin)/input_shape[1]\n",
+    "    zmin, zmax = np.min(zpos), np.max(zpos)\n",
+    "    delta_z = (zmax - zmin)/input_shape[2]\n",
+    "    for i, odom in enumerate(DOM_List):\n",
+    "        grid[(odom.string, odom.om)] = (int(math.floor((xpos[i]-xmin)/delta_x)),\n",
+    "                      int(math.floor((ypos[i]-ymin)/delta_y)),\n",
+    "                      int(math.floor((zpos[i]-zmin)/delta_z))\n",
+    "                      )\n",
+    "    return grid\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "test = make_grid_dict(input_shape,geo)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "folderpath = '/data/ana/PointSource/PS/IC86_2012/files/sim/2012/neutrino-generator/11069/00000-00999/'\n",
@@ -29,18 +109,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
-   "metadata": {},
+   "execution_count": 3,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "\n",
     "DOM_List_Expanded = list(itertools.product(range(1, 87),range(1,65)))\n",
-    "# charge_arr=[[] for i in range(len(DOM_List_Expanded))]\n",
-    "# time_arr=[[] for i in range(len(DOM_List_Expanded))]\n",
     "charge_arr = []\n",
     "time_arr = []\n",
     "trueval_arr = []\n",
-    "#trueval_arr=[[] for i in range(3)]\n",
     "geometry_file='/data/sim/sim-new/downloads/GCD/GeoCalibDetectorStatus_2012.56063_V0.i3.gz'\n",
     "#geometry_file='../ba_code/data/GeoCalibDetectorStatus_2012.56063_V0.i3.gz'\n",
     "geometry = dataio.I3File(geometry_file)\n",
@@ -50,19 +129,57 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
-   "metadata": {},
+   "execution_count": 27,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
-    "#print physics_event.keys()"
+    "# j=0\n",
+    "# for counter, in_file in enumerate(filelist):\n",
+    "#     if counter>10:\n",
+    "#         break\n",
+    "#     event_file = dataio.I3File(os.path.join(folderpath, in_file))\n",
+    "#     while event_file.more():\n",
+    "#             charge_arr.append(np.zeros((86,64)))\n",
+    "#             time_arr.append(np.full((86,64), np.inf))\n",
+    "#             physics_event = event_file.pop_physics()\n",
+    "#             pulses = physics_event['InIceDSTPulses'].apply(physics_event)\n",
+    "#             final_dict = dict()\n",
+    "#             for omkey in pulses.keys():\n",
+    "#                     temp_time = []\n",
+    "#                     temp_charge = []\n",
+    "#                     t_zero = np.inf\n",
+    "#                     for pulse in pulses[omkey]:\n",
+    "#                         temp_time.append(pulse.time)\n",
+    "#                         temp_charge.append(pulse.charge)\n",
+    "#                     final_dict[(omkey.string, omkey.om)] = (np.mean(temp_charge) ,np.mean(temp_time))\n",
+    "#                     if np.mean(temp_time)<t_zero:\n",
+    "#                         t_zero = np.mean(temp_time)\n",
+    "#             for dom in DOM_List_Expanded:\n",
+    "#                 if  dom in final_dict:\n",
+    "#                     charge_arr[j][dom[0]-1][dom[1]-1] = final_dict[dom][0]\n",
+    "#                     time_arr[j][dom[0]-1][dom[1]-1] = final_dict[dom][1]\n",
+    "#                 else:\n",
+    "#                     charge_arr[j][dom[0]-1][dom[1]-1] = 0\n",
+    "#                     time_arr[j][dom[0]-1][dom[1]-1] = np.inf\n",
+    "#             energy = physics_event['MCMostEnergeticTrack'].energy\n",
+    "#             azmiuth = physics_event['MCMostEnergeticTrack'].dir.azimuth \n",
+    "#             zenith = physics_event['MCMostEnergeticTrack'].dir.zenith\n",
+    "#             trueval_arr.append([energy,azmiuth, zenith])\n",
+    "#             j+=1"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
-   "metadata": {},
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
+    "######### New Version ##########\n",
+    "\n",
     "j=0\n",
     "for counter, in_file in enumerate(filelist):\n",
     "    if counter>10:\n",
@@ -101,7 +218,9 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -118,7 +237,9 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -148,7 +269,9 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -165,7 +288,9 @@
   {
    "cell_type": "code",
    "execution_count": 67,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "time_mask = np.ma.array(np.concatenate(time_arr[7]))\n",
@@ -175,7 +300,9 @@
   {
    "cell_type": "code",
    "execution_count": 70,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -192,7 +319,9 @@
   {
    "cell_type": "code",
    "execution_count": 72,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -222,7 +351,9 @@
   {
    "cell_type": "code",
    "execution_count": 63,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "dtype_doms=zip(DOM_List_Expanded,[np.float64]*(len(DOM_List_Expanded)))\n",
@@ -232,7 +363,9 @@
   {
    "cell_type": "code",
    "execution_count": 74,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "np.save('truevals.npy', np.array(trueval_arr))\n",
@@ -243,7 +376,9 @@
   {
    "cell_type": "code",
    "execution_count": 65,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# np.save('truevals.npy', np.array(zip(*trueval_arr), dtype=dtype_true))\n",
@@ -254,7 +389,9 @@
   {
    "cell_type": "code",
    "execution_count": 54,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -271,7 +408,9 @@
   {
    "cell_type": "code",
    "execution_count": 47,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -291,6 +430,7 @@
    "cell_type": "code",
    "execution_count": 20,
    "metadata": {
+    "collapsed": true,
     "scrolled": true
    },
    "outputs": [],
@@ -303,7 +443,9 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# print final_dict"
@@ -312,7 +454,9 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "#print val_arr"
@@ -332,7 +476,9 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -349,7 +495,9 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "ename": "ValueError",
@@ -370,7 +518,9 @@
   {
    "cell_type": "code",
    "execution_count": 266,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -387,7 +537,9 @@
   {
    "cell_type": "code",
    "execution_count": 246,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -406,7 +558,9 @@
   {
    "cell_type": "code",
    "execution_count": 135,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -423,7 +577,9 @@
   {
    "cell_type": "code",
    "execution_count": 197,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -446,7 +602,9 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "dtype= [\n",
@@ -463,7 +621,9 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "ename": "ValueError",
@@ -522,7 +682,9 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -724,7 +886,9 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "\"\"\"\n",
@@ -744,7 +908,9 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
