--- a/Neural_Network.ipynb
+++ b/Neural_Network.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 45,
    "metadata": {
     "collapsed": false
    },
@@ -15,7 +15,7 @@
     "import sys\n",
     "import keras\n",
     "from keras.models import Sequential\n",
-    "from keras.layers import Dense, Dropout, Activation, Flatten, Convolution2D, BatchNormalization, MaxPooling2D\n",
+    "from keras.layers import Dense, Dropout, Activation, Flatten, Convolution2D, BatchNormalization, MaxPooling2D,Convolution3D\n",
     "from keras.wrappers.scikit_learn import KerasRegressor\n",
     "from sklearn.model_selection import cross_val_score\n",
     "from sklearn.model_selection import KFold\n",
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 46,
    "metadata": {
     "collapsed": true
    },
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 47,
    "metadata": {
     "collapsed": false
    },
@@ -46,8 +46,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Shape of Input Data: (3081, 86, 64)\n",
-      "Shape of Output Data: (3081, 3)\n"
+      "Shape of Input Data: (405, 21, 21, 51)\n",
+      "Shape of Output Data: (405, 3)\n"
      ]
     }
    ],
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 48,
    "metadata": {
     "collapsed": false
    },
@@ -67,9 +67,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Range of training dataset 0:1320\n",
-      "Range of validation dataset 1321:2200\n",
-      "Range of test dataset 2201:3081\n"
+      "Range of training dataset 0:173\n",
+      "Range of validation dataset 174:288\n",
+      "Range of test dataset 289:405\n"
      ]
     }
    ],
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
@@ -97,53 +97,32 @@
       "_________________________________________________________________\n",
       "Layer (type)                 Output Shape              Param #   \n",
       "=================================================================\n",
-      "conv2d_16 (Conv2D)           (None, 77, 60, 8)         408       \n",
+      "conv3d_2 (Conv3D)            (None, 17, 17, 47, 8)     1008      \n",
       "_________________________________________________________________\n",
-      "batch_normalization_14 (Batc (None, 77, 60, 8)         32        \n",
+      "batch_normalization_15 (Batc (None, 17, 17, 47, 8)     32        \n",
       "_________________________________________________________________\n",
-      "activation_15 (Activation)   (None, 77, 60, 8)         0         \n",
+      "activation_17 (Activation)   (None, 17, 17, 47, 8)     0         \n",
       "_________________________________________________________________\n",
-      "flatten_14 (Flatten)         (None, 36960)             0         \n",
+      "flatten_15 (Flatten)         (None, 108664)            0         \n",
       "_________________________________________________________________\n",
-      "dense_27 (Dense)             (None, 64)                2365504   \n",
+      "dense_29 (Dense)             (None, 64)                6954560   \n",
       "_________________________________________________________________\n",
-      "activation_16 (Activation)   (None, 64)                0         \n",
+      "activation_18 (Activation)   (None, 64)                0         \n",
       "_________________________________________________________________\n",
-      "dense_28 (Dense)             (None, 1)                 65        \n",
+      "dense_30 (Dense)             (None, 1)                 65        \n",
       "=================================================================\n",
-      "Total params: 2,366,009\n",
-      "Trainable params: 2,365,993\n",
-      "Non-trainable params: 16\n",
-      "_________________________________________________________________\n",
-      "None\n",
-      "Train on 1320 samples, validate on 879 samples\n",
-      "Epoch 1/10\n",
-      "1320/1320 [==============================] - 19s - loss: 6841462666866.4238 - acc: 0.0000e+00 - val_loss: 6200197333886.1074 - val_acc: 0.0000e+00\n",
-      "Epoch 2/10\n",
-      "1320/1320 [==============================] - 19s - loss: 6145456096826.1816 - acc: 0.0000e+00 - val_loss: 5063531409421.9795 - val_acc: 0.0000e+00\n",
-      "Epoch 3/10\n",
-      "1320/1320 [==============================] - 21s - loss: 4990467264698.1816 - acc: 0.0000e+00 - val_loss: 4305704451350.4248 - val_acc: 0.0000e+00\n",
-      "Epoch 4/10\n",
-      "1320/1320 [==============================] - 55s - loss: 4592142346426.1816 - acc: 0.0000e+00 - val_loss: 4278333189636.0771 - val_acc: 0.0000e+00\n",
-      "Epoch 5/10\n",
-      "1320/1320 [==============================] - 48s - loss: 4522104864395.6357 - acc: 0.0000e+00 - val_loss: 4381342949534.4346 - val_acc: 0.0000e+00\n",
-      "Epoch 6/10\n",
-      "1320/1320 [==============================] - 48s - loss: 4496876802172.1211 - acc: 0.0000e+00 - val_loss: 4346410116003.9678 - val_acc: 0.0000e+00\n",
-      "Epoch 7/10\n",
-      "1320/1320 [==============================] - 49s - loss: 4492623098973.0908 - acc: 0.0000e+00 - val_loss: 4347304937399.7725 - val_acc: 0.0000e+00\n",
-      "Epoch 8/10\n",
-      "1320/1320 [==============================] - 48s - loss: 4489105024837.8184 - acc: 0.0000e+00 - val_loss: 4338977774525.5967 - val_acc: 0.0000e+00\n",
-      "Epoch 9/10\n",
-      "1320/1320 [==============================] - 49s - loss: 4500809725889.9395 - acc: 0.0000e+00 - val_loss: 4378410061530.4307 - val_acc: 0.0000e+00\n",
-      "Epoch 10/10\n",
-      "1320/1320 [==============================] - 49s - loss: 4503807873272.2422 - acc: 0.0000e+00 - val_loss: 4366503623045.0967 - val_acc: 0.0000e+00\n"
+      "Total params: 6,955,665"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/cvmfs/icecube.opensciencegrid.org/py2-v2/RHEL_6_x86_64/lib/python2.7/site-packages/IPython/kernel/__main__.py:55: UserWarning: Update your `Conv2D` call to the Keras 2 API: `Conv2D(8, (10, 5), input_shape=(86, 64, 1...)`\n"
+      "/cvmfs/icecube.opensciencegrid.org/py2-v2/RHEL_6_x86_64/lib/python2.7/site-packages/IPython/kernel/__main__.py:55: UserWarning: Update your `Conv3D` call to the Keras 2 API: `Conv3D(8, (5, 5, 5), input_shape=(21, 21, 5...)`\n",
+      "INFO (theano.gof.compilelock): Refreshing lock /home/tglauch/.theano/compiledir_Linux-2.6-el6.x86_64-x86_64-with-redhat-6.4-Santiago-x86_64-2.7.10-64/lock_dir/lock\n",
+      "INFO:theano.gof.compilelock:Refreshing lock /home/tglauch/.theano/compiledir_Linux-2.6-el6.x86_64-x86_64-with-redhat-6.4-Santiago-x86_64-2.7.10-64/lock_dir/lock\n",
+      "INFO (theano.gof.compilelock): Refreshing lock /home/tglauch/.theano/compiledir_Linux-2.6-el6.x86_64-x86_64-with-redhat-6.4-Santiago-x86_64-2.7.10-64/lock_dir/lock\n",
+      "INFO:theano.gof.compilelock:Refreshing lock /home/tglauch/.theano/compiledir_Linux-2.6-el6.x86_64-x86_64-with-redhat-6.4-Santiago-x86_64-2.7.10-64/lock_dir/lock\n"
      ]
     }
    ],
@@ -191,7 +170,7 @@
     "     - either MaxPooling to reduce resolution, or Dropout\n",
     "     - BatchNormalization\n",
     "    \"\"\"\n",
-    "    model.add(Convolution2D(nfilters, 10, 5, **kwargs)) #border_mode='same', init=\"he_normal\", \n",
+    "    model.add(Convolution3D(nfilters, 5, 5,5, **kwargs)) #border_mode='same', init=\"he_normal\", \n",
     "    model.add(BatchNormalization())\n",
     "    model.add(Activation('relu'))\n",
     "    if dropout:\n",
@@ -202,7 +181,7 @@
     "def base_model():\n",
     "    # # convolution part\n",
     "    model = Sequential()\n",
-    "    model.add(Convolution2D(8, 10, 5,input_shape=(86, 64,1))) #border_mode='same', init=\"he_normal\", \n",
+    "    model.add(Convolution3D(8, (5,5,5) , input_shape=(21, 21,51,1))) #border_mode='same', init=\"he_normal\", \n",
     "    model.add(BatchNormalization())\n",
     "    model.add(Activation('relu'))\n",
     "    \n",
@@ -234,7 +213,7 @@
     "              validation_data=(np.expand_dims(valid, axis=4), valid_out),\n",
     "              callbacks=[keras.callbacks.CSVLogger('./train_hist/history.csv')],\n",
     "              verbose=1)\n",
-    "model.save('./train_hist/model.h5')  # save trained network\n",
+    "#estimator.save('./train_hist/model.h5')  # save trained network\n",
     "\n",
     "# print('Model performance (loss, accuracy)')\n",
     "# print('Train: %.4f, %.4f' % tuple(model.evaluate(train, verbose=0, batch_size=128)))\n",
