--- a/Create_Data_Files.ipynb
+++ b/Create_Data_Files.ipynb
@@ -103,6 +103,25 @@
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "980\n"
+     ]
+    }
+   ],
+   "source": [
+    "print len(filelist)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {
     "collapsed": true
    },
    "outputs": [],
@@ -168,7 +187,17 @@
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "1\n",
+      "2"
+     ]
+    }
+   ],
    "source": [
     "######### New Version ##########\n",
     "grid, DOM_list = make_grid_dict(input_shape,geo)\n",
@@ -177,8 +206,7 @@
     "time_arr = []\n",
     "trueval_arr = []\n",
     "for counter, in_file in enumerate(filelist):\n",
-    "    if counter>50:\n",
-    "        break\n",
+    "    print counter\n",
     "    event_file = dataio.I3File(os.path.join(folderpath, in_file))\n",
     "    while event_file.more():\n",
     "            ######### The +1 is not optimel....probably reconsider \n",
@@ -212,70 +240,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(405, 21, 21, 51)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print np.shape(charge_arr)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(21, 21, 51)\n"
-     ]
-    }
-   ],
-   "source": [
-    "print np.shape(charge_arr[0])"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
-    " 57 63 45 82 35 34 79"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 39,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "18828.137372\n"
-     ]
-    }
-   ],
-   "source": [
-    "print ([i[0] for i in trueval_arr[0:100]])[0]"
+    "print np.shape(charge_arr[0])"
    ]
   },
   {
@@ -304,7 +286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 50,
    "metadata": {
     "collapsed": true
    },
