Correct Grid and more consistent condor file path

--- a/Create_Data_Files.ipynb
+++ b/Create_Data_Files.ipynb
@@ -120,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {
     "collapsed": true
    },
@@ -179,6 +179,70 @@
     "#             zenith = physics_event['MCMostEnergeticTrack'].dir.zenith\n",
     "#             trueval_arr.append([energy,azmiuth, zenith])\n",
     "#             j+=1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "test = dataio.I3File('/data/ana/PointSource/PS/IC86_2012/files/sim/2012/neutrino-generator/11069/00000-00999/Final_v2_nugen_numu_IC86.2012.011069.000000.i3.bz2')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 179,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "event = test.pop_physics()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 180,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "193.43846751\n",
+      "7250.89128572\n",
+      "6229.47273208\n"
+     ]
+    }
+   ],
+   "source": [
+    "print event['SplineMPEMuEXDifferential'].energy/1e3\n",
+    "print event['MCMostEnergeticInIce'].energy/1e3\n",
+    "print event['MCMostEnergeticTrack'].energy/1e3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['InIceDSTPulses', 'I3MCWeightDict', 'HiveSplitterSplitCount', 'FilterMask_NullSplit0', 'CalibratedWaveformRange', 'PassedKeepSuperDSTOnly', 'IceTopDSTPulses', 'MMCTrackList', 'OfflineIceTopSLCVEMPulses', 'HiveSplitterReducedCount', 'InIcePulses', 'DSTTriggers', 'I3MCPulseSeriesMap', 'OfflineIceTopHLCTankPulses', 'IceTopPulses', 'I3MCPulseSeriesMapParticleIDMap', 'PassedConventional', 'TankPulseMergerExcludedTanks', 'I3DST12', 'I3MCPESeriesMap', 'UncleanedInIcePulsesTimeRange', 'PassedAnyFilter', 'I3MCTree', 'I3SuperDST', 'SplineMPETruncatedEnergy_SPICEMie_AllBINS_Muon', 'BestTrackCharacteristicsIC', 'SplineMPETruncatedEnergy_SPICEMie_DOMS_Muon', 'SplineMPEBootstrapFinal', 'SplineMPEDirectHitsC', 'SPEFitSingleTimeSplit2FitParams', 'SplineMPE_MillipedeHighEnergyMIEFitParams', 'I3EventHeader', 'MuEXAngular4_Sigma', 'LineFitTimeSplit2Params', 'SplineMPEmod', 'SplineMPETruncatedEnergy_SPICEMie_AllDOMS_MuEres', 'SplineMPEvsLineFit', 'LineFitTimeSplit2', 'SplineMPE_StartingDist', 'SplineMPETruncatedEnergy_SPICEMie_DOMS_Neutrino', 'LineFit_HV', 'MillipedeHVSplitPulses', 'QFilterMask', 'SRTHVInIcePulses', 'SplineMPETruncatedEnergy_SPICEMie_ORIG_dEdX', 'BestTrackDirectHitsB', 'BestTrackDirectHitsD', 'BDT_UG_soft', 'SplitTime2', 'SplineMPEmodFitParams', 'LineFit_TWHV', 'SPEFit2GeoSplit2BayesianFitParams', 'MPEFit_TWHV', 'SPEFit2TimeSplit1BayesianFitParams', 'SPEFit2TimeSplit2FitParams', 'timeMJD', 'MCMostEnergeticInIce', 'SplineMPEBootstrapMean', 'SplineMPEBootstrap', 'SPEFit2_HV', 'MuEXAngular4', 'MPEFitHighNoiseFitParams', 'LLH_Millipede', 'SplineMPETruncatedEnergy_SPICEMie_BINS_MuEres', 'SplineMPETruncatedEnergy_SPICEMie_BINS_dEdX', 'HitMultiplicityValuesIC', 'SplineMPETruncatedEnergy_SPICEMie_DOMS_MuEres', 'LineFitGeoSplit2', 'SPEFit2TimeSplit2BayesianFitParams', 'MPEFit_HV', 'TWCleanSplitGeo1', 'BestTrackDirectHitsICC', 'SplitMinZenith', 'SPEFitSingleGeoSplit1', 'HitMultiplicityValues', 'TWSRTHVInIcePulses', 'SPEFit2TimeSplit2', 'SplineMPE_PunchThroughPoint', 'SplineMPEParaboloid', 'HVInIcePulses', 'MPEFit_TWHVFitParams', 'SPEFitSingleGeoSplit2', 'OfflineIceTopHLCVEMPulses', 'SPEFitSingleGeoSplit1FitParams', 'MPEFitParaboloid', 'SplineMPE_MillipedeHighEnergyMIE_Stats', 'LineFit_HVParams', 'SplineMPECharacteristicsIC', 'SplineMPECharacteristics', 'BestTrack_AvgDistQ', 'SplineMPEBootstrapFitParamsMean', 'SplineMPEDirectHitsICA', 'SplineMPE_DistInDetector', 'SplineMPEvsHighNoise', 'SPEFit2GeoSplit1Bayesian', 'SplineMPETruncatedEnergy_SPICEMie_AllBINS_Neutrino', 'MCMostEnergeticTrack', 'SplineMPEBootstrapFinalFitParams', 'SplineMPEDirectHitsE', 'SplineMPEFitParams', 'SplitTime1', 'SplineMPETruncatedEnergy_SPICEMie_AllBINS_dEdX', 'BDT_DG', 'SPEFitSingleGeoSplit2FitParams', 'SplineMPEMuEXDifferential', 'SPEFitSingleTimeSplit1', 'SplineMPEDirectHitsA', 'MPEFitParaboloidFitParams', 'SPEFit2GeoSplit1FitParams', 'SRTHVInIcePulses_Qtot', 'SPEFit2TimeSplit2Bayesian', 'SPEFit2GeoSplit2FitParams', 'SplineMPEDirectHitsICD', 'CorsikaWeightMap', 'SPEFit2BayesianFitParams', 'SplineMPE', 'PreCutPassed', 'IceTopVeto', 'SPEFitSingle_HV', 'SPEFit2_TWHVFitParams', 'BestTrackDirectHitsICD', 'TWCleanSplitGeo2', 'LineFitTimeSplit1Params', 'LineFitGeoSplit2Params', 'SPEFit2TimeSplit1Bayesian', 'BestTrackDirectHitsE', 'HitStatisticsValues', 'SPEFitSingleTimeSplit2', 'SplineMPEDirectHitsB', 'MillipedeHVSplitPulsesReadoutWindow', 'SPEFit2GeoSplit1BayesianFitParams', 'HitStatisticsValuesIC', 'SPEFit2_HVFitParams', 'TriggerSplitterTimeWindows', 'SplineMPETruncatedEnergy_SPICEMie_AllDOMS_dEdX', 'MillipedeHVSplitPulsesExcludedTimeRange', 'ParabSigma', 'Millipede_FirstLoss_XYDist', 'BestTrackCramerRaoParams', 'BDT_UG_hard', 'BestTrackDirectHitsA', 'SplineMPEParaboloidFitParams', 'Millipede_FirstLoss_ZDist', 'SPEFit2TimeSplit1', 'SPEFitSingle_TWHV', 'SplineMPEMuEXDifferential_r', 'SplitGeo1', 'Millipede_TotalDepEn', 'TWCleanSplitTime2', 'SplineMPETruncatedEnergy_SPICEMie_BINS_Muon', 'SplineMPEDirectHitsICC', 'SplineMPECramerRaoParams', 'SplineMPETruncatedEnergy_SPICEMie_AllDOMS_Muon', 'MuEXAngular4_rllt', 'SPEFit2GeoSplit2', 'SplineMPEBootstrapVectStats', 'MCECenter', 'SplineMPE_MillipedeHighEnergyMIE', 'BestTrackDirectHitsICB', 'LineFit_TWHVParams', 'SplineMPETruncatedEnergy_SPICEMie_AllDOMS_Neutrino', 'SplineMPE_MillipedeHighEnergyMIE_Vertex', 'SPEFitSingleTimeSplit1FitParams', 'SplineMPEDirectHitsD', 'ClusterCleaningExcludedTanks', 'BestTrack', 'BestTrackDirectHitsICE', 'SPEFit2_TWHV', 'SplineMPETruncatedEnergy_SPICEMie_ORIG_Muon', 'FilterMask_IceTopSplit0', 'SPEFitSingle_HVFitParams', 'SPEFit2GeoSplit2Bayesian', 'SplineMPETruncatedEnergy_SPICEMie_ORIG_Neutrino', 'MPEFitHighNoise', 'SplineMPEBootstrapFitParams', 'Millipede_dEdX', 'SplineMPEDirectHitsICB', 'MCPrimary1', 'TWCleanSplitTime1', 'SplineMPEBootstrapVect', 'SimTrimmer', 'SplineMPETruncatedEnergy_SPICEMie_BINS_Neutrino', 'SPEFit2Bayesian', 'BDT_DGzen', 'SPEFit2TimeSplit1FitParams', 'SPEFit2GeoSplit1', 'SRTHVInIcePulses_QtotWithDC', 'BestTrackDirectHitsICA', 'BestTrackDirectHitsC', 'SplineMPE_ExitPoint', 'SplineMPEBootstrapFitParamsVect', 'MPEFit_HVFitParams', 'SplineMPETruncatedEnergy_SPICEMie_AllBINS_MuEres', 'LLH_TRes', 'BestTrackName', 'SplineMPETruncatedEnergy_SPICEMie_DOMS_dEdX', 'LineFitGeoSplit1', 'LineFitTimeSplit1', 'SPEFitSingle_TWHVFitParams', 'SplitGeo2', 'LineFitGeoSplit1Params', 'BestTrackCharacteristics', 'SplineMPEDirectHitsICE', 'TWSRTHVInIcePulsesIC', 'SplineMPEBootstrapAngular']\n"
+     ]
+    }
+   ],
+   "source": [
+    "print test.pop_physics().keys()"
    ]
   },
   {
