Use multiple files for training and save model checkpoints while training

--- a/Evaluate_Model.ipynb
+++ b/Evaluate_Model.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -194,6 +194,53 @@
    ],
    "source": [
     "print val_loss"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "a = np.arange(20)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "test1 = np.random.choice(a,10, replace = False)\n",
+    "test2 = np.random.choice(a,7, replace = False)\n",
+    "test3 = np.random.choice(a,3, replace = False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ 3 19 14  8  1  9 16 10  5 17]\n",
+      "[17  7  4 11 18  9 19]\n",
+      "[ 0 12  5]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print test1\n",
+    "print test2\n",
+    "print test3"
    ]
   },
   {
