added specific submit files

--- a/Evaluate_Model.ipynb
+++ b/Evaluate_Model.ipynb
@@ -22,6 +22,36 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "shelf = shelve.open('./train_hist/2017-07-21/some_NN/run_info.shlf')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[(4545, 9090), (4545, 9090), (4545, 9090)]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print shelf['Valid_Inds']"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 5,
    "metadata": {
     "collapsed": false
