going on with the first diffuse network

--- a/Notebooks/Evaluate_Model.ipynb
+++ b/Notebooks/Evaluate_Model.ipynb
@@ -65,7 +65,9 @@
   {
    "cell_type": "code",
    "execution_count": 584,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -104,7 +106,9 @@
   {
    "cell_type": "code",
    "execution_count": 585,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -147,15 +151,15 @@
     "ax.set_ylim(1.5,7)\n",
     "ax.set_xlim(1.5,7)\n",
     "plt.savefig('{}_PDF.png'.format(save_names[which]), dpi=300)\n",
-    "plt.show()\n",
-    "\n",
-    "\n"
+    "plt.show()\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 589,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "temp_resolution = []\n",
@@ -176,7 +180,9 @@
   {
    "cell_type": "code",
    "execution_count": 587,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -211,7 +217,9 @@
   {
    "cell_type": "code",
    "execution_count": 524,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -266,7 +274,9 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -330,7 +340,9 @@
   {
    "cell_type": "code",
    "execution_count": 192,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -369,7 +381,9 @@
   {
    "cell_type": "code",
    "execution_count": 475,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -409,7 +423,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.13"
+   "version": "2.7.10"
   }
  },
  "nbformat": 4,
