Remove TXT option. If needed just write a function that converts a txt file to a pickle file and use this as input

--- a/Notebooks/Playground.ipynb
+++ b/Notebooks/Playground.ipynb
@@ -1388,6 +1388,124 @@
    },
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "from configparser import ConfigParser"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "cfg_pars = ConfigParser()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/usr/local/lib/python2.7/site-packages/ipykernel_launcher.py:1: DeprecationWarning: You passed a bytestring as `filenames`. This will not work on Python 3. Use `cp.read_file()` or switch to using Unicode strings across the board.\n",
+      "  \"\"\"Entry point for launching an IPython kernel.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "['./../configs/default_new.cfg']"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cfg_pars.read('./../configs/default_new.cfg')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[u'DEFAULT',\n",
+       " u'Basics',\n",
+       " u'Input_Charges',\n",
+       " u'Input_Times',\n",
+       " u'Input_Waveforms1',\n",
+       " u'Cuts',\n",
+       " u'depositedE',\n",
+       " u'hitDOMs',\n",
+       " u'firstParticle',\n",
+       " u'energyFirstParticle',\n",
+       " u'zenith',\n",
+       " u'RunID',\n",
+       " u'EventID',\n",
+       " u'TauDecayLength',\n",
+       " u'ClassificationLabel',\n",
+       " u'StartingLabel',\n",
+       " u'UpDownLabel',\n",
+       " u'CoincidenceLabel',\n",
+       " u'MinBias_Filter',\n",
+       " u'Cascade_Filter',\n",
+       " u'Muon_Filter']"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cfg_pars.keys()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<Section: Input_Charges>\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = cfg_pars['Input_Charges']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "x."
+   ]
   }
  ],
  "metadata": {
