move some files

--- a/Notebooks/Playground.ipynb
+++ b/Notebooks/Playground.ipynb
@@ -1391,7 +1391,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {
     "collapsed": true
    },
@@ -1402,7 +1402,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "metadata": {
     "collapsed": true
    },
@@ -1413,7 +1413,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -1430,7 +1430,7 @@
        "['./../configs/default_new.cfg']"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1441,7 +1441,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -1470,7 +1470,7 @@
        " u'Muon_Filter']"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1481,19 +1481,80 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "x = cfg_pars['Input_Charges']\n",
+    "y =cfg_pars['Input_Times']\n",
+    "z = cfg_pars['Input_Waveforms1']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def replace_with_var(x):\n",
+    "    if ('(' in x) and (')' in x): \n",
+    "        y = x[x.index('('):x.index(')')]\n",
+    "        x = x.replace(y, y.replace('c', 'charges').replace('t', 'times').replace('w', 'width'))\n",
+    "    else:\n",
+    "        x=x.replace('c', 'charges').replace('t', 'times').replace('w', 'width')\n",
+    "    return x"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<Section: Input_Charges>\n"
+      "np.sum(c)\n",
+      "c[0]\n",
+      "len(c)\n",
+      "np.amin(t)\n",
+      "np.amax(t)-np.amin(t)\n",
+      "average(c, 1./w)\n",
+      "skew(t)\n",
+      "moment(times, moment=2)\n"
      ]
     }
    ],
    "source": [
-    "x = cfg_pars['Input_Charges']"
+    "inputs = []\n",
+    "for key in x.keys():\n",
+    "    inputs.append((key, replace_with_var(x[key])))\n",
+    "for key in y.keys():\n",
+    "    inputs.append((key, replace_with_var(y[key])))\n",
+    "for q in z['quantiles'].split(','):\n",
+    "    inputs.append(('{}_{}_pct_charge_quantile'.format(z['type'], q.strip().replace('.','_')),\n",
+    "                   'fu.wf_quantiles(waveform, {})[\\'{}\\']'.format(q, z['type'])))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[(u'charge', u'np.sum(charges)'), (u'first_charge', u'charges[0]'), (u'num_pulses', u'len(charges)'), (u'time_first', u'np.amin(times)'), (u'time_spread', u'np.amax(times)-np.amin(times)'), (u'av_time_charges', u'average(charges, 1./width)'), (u'time_kurtosis', u'skew(times)'), (u'time_moment_2', u'moment(timesimes, momentimes=2)'), ('ATWD_0_05_pct_charge_quantile', \"fu.wf_quantiles(waveform, 0.05)['ATWD']\"), ('ATWD_0_1_pct_charge_quantile', \"fu.wf_quantiles(waveform,  0.1)['ATWD']\"), ('ATWD_0_15_pct_charge_quantile', \"fu.wf_quantiles(waveform,  0.15)['ATWD']\"), ('ATWD_0_2_pct_charge_quantile', \"fu.wf_quantiles(waveform,  0.2)['ATWD']\"), ('ATWD_0_25_pct_charge_quantile', \"fu.wf_quantiles(waveform,  0.25)['ATWD']\"), ('ATWD_0_3_pct_charge_quantile', \"fu.wf_quantiles(waveform,  0.3)['ATWD']\"), ('ATWD_0_35_pct_charge_quantile', \"fu.wf_quantiles(waveform,  0.35)['ATWD']\"), ('ATWD_0_4_pct_charge_quantile', \"fu.wf_quantiles(waveform,  0.4)['ATWD']\"), ('ATWD_0_45_pct_charge_quantile', \"fu.wf_quantiles(waveform,  0.45)['ATWD']\"), ('ATWD_0_5_pct_charge_quantile', \"fu.wf_quantiles(waveform,  0.5)['ATWD']\"), ('ATWD_0_55_pct_charge_quantile', \"fu.wf_quantiles(waveform,  0.55)['ATWD']\"), ('ATWD_0_6_pct_charge_quantile', \"fu.wf_quantiles(waveform,  0.6)['ATWD']\"), ('ATWD_0_65_pct_charge_quantile', \"fu.wf_quantiles(waveform,  0.65)['ATWD']\"), ('ATWD_0_7_pct_charge_quantile', \"fu.wf_quantiles(waveform,  0.7)['ATWD']\"), ('ATWD_0_75_pct_charge_quantile', \"fu.wf_quantiles(waveform,  0.75)['ATWD']\"), ('ATWD_0_8_pct_charge_quantile', \"fu.wf_quantiles(waveform,  0.8)['ATWD']\"), ('ATWD_0_85_pct_charge_quantile', \"fu.wf_quantiles(waveform,  0.85)['ATWD']\"), ('ATWD_0_9_pct_charge_quantile', \"fu.wf_quantiles(waveform,  0.9)['ATWD']\"), ('ATWD_0_95_pct_charge_quantile', \"fu.wf_quantiles(waveform,  0.95)['ATWD']\")]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print inputs"
    ]
   },
   {
@@ -1503,9 +1564,7 @@
     "collapsed": true
    },
    "outputs": [],
-   "source": [
-    "x."
-   ]
+   "source": []
   }
  ],
  "metadata": {
